--- a/register.html
+++ b/register.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <form action=""></form>
+    <form action="./login.html" method="get">
+        <div>
+            <label for="surname"></label>
+            <input id="surnname" type="text" name="apellido" placeholder="Apellido" value="" required>
+        </div>
+        <div>
+            <label for="name"></label>
+            <input id="name" type="text" name="nombre" placeholder="Nombre" value="" required>
+        </div>
+        <div>
+            <label for="email"></label>
+            <input id="email" type="email" name="mail" placeholder="Ingrese su email" value="" required>
+        </div>
+        <div>
+            <label for="pass"></label>
+            <input id="passs" type="password" name="contra" placeholder="Ingrese su contrasena">
+        </div>
+    </form>
 </body>
 </html>
