--- a/register.html
+++ b/register.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <form action="./login.html" method="get">
+    <div>
+        <img src="./img/logo.png" id="logo-register" alt="logo">
+    </div>
+    <form class="register" action="./login.html" method="get">
         <div>
             <label for="surname"></label>
             <input id="surnname" type="text" name="apellido" placeholder="Apellido" value="" required>
