header y algo del nav

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Home</title>
 </head>
 <body>
+    <header>
+        <img src="img/logonombre.png" alt="logonombre lenga">
+
+        <nav>
+            <ul>
+                <li>Categoria</li>
+                <li></li>
+            </ul>
+        </nav>
+    </header>
+
     <h1>Título</h1>
+
 </body>
 </html>
