--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     <h1>Título</h1>
+    <footer>
+        <h4>Integrantes:</h4>
+        <ul>
+            <li>Agustín Oñate</li>
+            <li>Marcos Bunge</li>
+            <li>Victor Biazzin Rubinho</li>
+        </ul>
+    </footer>
 </body>
 </html>
