--- a/register.html
+++ b/register.html
@@ -27,6 +27,9 @@
             <label for="pass"></label>
             <input id="passs" type="password" name="contra" placeholder="Ingrese su contrasena">
         </div>
+        <div>
+            <button class="enviar-register" type="submit">Enviar</button>
+        </div>
     </form>
 </body>
 </html>
