--- a/login.html
+++ b/login.html
@@ -8,17 +8,20 @@
 </head>
 <body>
     <div>
-        <img src="img/logonombre.png" alt="logo">
+        <img src="img/logo.png" alt="logo">
     </div>
-    <form class="login" action="index.html" method="get">
+    <form class="register" action="index.html" method="get">
         <div>
             <label for="email">Email:</label>
             <input id="email" type="text" name="email" placeholder="Ingrese su email" value="" required>
         </div>
         <div>
             <label for="contrasena">Contraseña:</label>
-            <input id="contrasena" type="text" name="contrasena" placeholder="Ingrese su contraseña" value="" required>
+            <input id="contrasena" type="password" name="contrasena" placeholder="Ingrese su contraseña" value="" required>
         </div> 
+        <div>
+            <button type="submit">Enviar</button>
+        </div>
     </form> 
 </body>
 </html>
