--- a/index.html
+++ b/index.html
@@ -6,30 +6,24 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Home</title>
 </head>
-<body>
-    <header>
+<header>
         <img src="img/logonombre.png" alt="logonombre lenga">
-
+        <form action="./searchresults.html" method="get">
+            <label for="search"></label>
+            <input id="search" type="text" name="busqueda" placeholder="Busqueda" value="">
+        </form>
         <nav>
             <ul>
-                <li>Categoria</li>
-                <li></li>
+                <li><a href="./index.html">HOME</a></li>
+                <li>CATEGORIAS</li>
+                <li>LOGIN</li>
+                <li>REGISTRARSE</li>
             </ul>
         </nav>
     </header>
+<body>
 
     <h1>Título</h1>
-<<<<<<< HEAD
     
-=======
-    <footer>
-        <h4>Integrantes:</h4>
-        <ul>
-            <li>Agustín Oñate</li>
-            <li>Marcos Bunge</li>
-            <li>Victor Biazzin Rubinho</li>
-        </ul>
-    </footer>
->>>>>>> b0a33a06a43ae2d3eef28b97c8eba590193d9cb9
 </body>
 </html>
