--- a/register.html
+++ b/register.html
@@ -25,7 +25,11 @@
         </div>
         <div>
             <label for="pass"></label>
-            <input id="passs" type="password" name="contra" placeholder="Ingrese su contrasena">
+            <input id="passs" type="password" name="contra" placeholder="Ingrese su contrasena" value="" required>
+        </div>
+        <div>
+            <label for="username"></label>
+            <input id="username" type="text" name="usuario" placeholder="Ingrese su nombre de usuario" value="" required>
         </div>
         <div>
             <button class="enviar-register" type="submit">Enviar</button>
