fondo home prueba

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
 <body>
-
+    <img id="fondoguitarra" src="img/fondohomeguitarra.jpg" alt="fondoguitarra"
     <h1>Título</h1>
     
 </body>
