--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
             <ul>
                 <li><a href="./index.html">HOME</a></li>
                 <li>CATEGORIAS</li>
-                <li>LOGIN</li>
-                <li>REGISTRARSE</li>
+                <li><a href="./login.html">LOGIN</a></li>
+                <li><a href="./register.html">REGISTRARSE</a> </li>
             </ul>
         </nav>
     </header>
 <body>
-    <img id="fondoguitarra" src="img/fondohomeguitarra.jpg" alt="fondoguitarra"
-    <h1>Título</h1>
+    <img id="fondoguitarra" src="img/fondohomeguitarra.jpg" alt="fondoguitarra">
     
 </body>
 </html>
