fondo principal y buscador

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <header>
         <img id="logonombre" src="img/logonombre.png" alt="logonombre lenga">
-        <form action="./searchresults.html" method="get">
+        <form id="buscador" action="./searchresults.html" method="get">
             <label for="search"></label>
             <input id="search" type="text" name="busqueda" placeholder="Busqueda" value="">
         </form>
@@ -23,9 +23,8 @@
                 <li><a href="./register.html">REGISTRARSE</a> </li>
             </ul>
         </nav>
-    </header>
+</header>
 <body>
-    <img id="fondoguitarra" src="img/fondohomeguitarra.jpg" alt="fondoguitarra">
     
 </body>
 </html>
