cambio de logos

--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
 <body>
     <div>
         <a href="./index.html">
-            <img src="./img/logo.png" id="logo-register-login" alt="logo">
+            <img src="./img/logo-gris.png" id="logo-register-login" alt="logo">
         </a>
     </div>
     <form class="register" action="./login.html" method="get">
