--- a/index.html
+++ b/index.html
@@ -11,22 +11,31 @@
 </head>
 <body>
     <header>
-    <a href="./index.html">    
-        <img id="logonombre" src="img/logonombre.png" alt="logonombre lenga">
-    </a>
-    <form id="buscador" action="./searchresults.html" method="get">
-        <label for="search"></label>
-        <input id="search" type="text" name="busqueda" placeholder="Busqueda" value="">
-    </form>
-    <nav>
+        <a href="./index.html">    
+            <img id="logonombre" src="img/logonombre.png" alt="logonombre lenga">
+        </a>
+        <form id="buscador" action="./searchresults.html" method="get">
+            <label for="search"></label>
+            <input id="search" type="text" name="busqueda" placeholder="Busqueda" value="">
+        </form>
+        <nav>
+            <ul>
+                <li><a href="./index.html">HOME</a></li>
+                <li>CATEGORIAS</li>
+                <li><a href="./login.html">LOGIN</a></li>
+                <li><a href="./register.html">REGISTRARSE</a> </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
         <ul>
-            <li><a href="./index.html">HOME</a></li>
-            <li>CATEGORIAS</li>
-            <li><a href="./login.html">LOGIN</a></li>
-            <li><a href="./register.html">REGISTRARSE</a> </li>
+            <li>Agustín Oñate</li>
+            <li>Marcos Bunge</li>
+            <li>Victor Biazzin Rubinho</li>
         </ul>
-    </nav>
-</header>
-    
+    </footer>
 </body>
 </html>
