--- a/login.html
+++ b/login.html
@@ -17,16 +17,17 @@
     </div>
     <form class="register" action="index.html" method="get">
         <div>
-            <label for="email">Email:</label>
+            <label for="email"></label>
             <input id="email" type="text" name="email" placeholder="Ingrese su email" value="" required>
         </div>
         <div>
-            <label for="contrasena">Contraseña:</label>
+            <label for="contrasena"></label>
             <input id="contrasena" type="password" name="contrasena" placeholder="Ingrese su contraseña" value="" required>
         </div> 
         <div>
-            <button type="submit">Enviar</button>
+            <button type="submit">Ingresar</button>
         </div>
+        <a href="./register.html">No tengo cuenta</a>
     </form> 
 </body>
 </html>
