--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
 
     </main>
-    <footer>
+    <footer class="footer">
         <ul>
             <li>Agustín Oñate</li>
             <li>Marcos Bunge</li>
