--- a/register.html
+++ b/register.html
@@ -17,14 +17,6 @@
     </div>
     <form class="register" action="./login.html" method="get">
         <div>
-            <label for="surname"></label>
-            <input id="surnname" type="text" name="apellido" placeholder="Apellido" value="" required>
-        </div>
-        <div>
-            <label for="name"></label>
-            <input id="name" type="text" name="nombre" placeholder="Nombre" value="" required>
-        </div>
-        <div>
             <label for="email"></label>
             <input id="email" type="email" name="mail" placeholder="Ingrese su email" value="" required>
         </div>
@@ -33,11 +25,11 @@
             <input id="passs" type="password" name="contra" placeholder="Ingrese su contraseña" value="" required>
         </div>
         <div>
-            <label for="username"></label>
-            <input id="username" type="text" name="usuario" placeholder="Nombre de usuario" value="" required>
+            <label for="pass"></label>
+            <input id="passs" type="password" name="contra" placeholder="Repetir contraseña" value="" required>
         </div>
         <div>
-            <button class="enviar-register" type="submit">Enviar</button>
+            <button class="enviar-register" type="submit">Registrarme</button>
         </div>
     </form>
 </body>
