Section y art para los productos en el main index

--- a/index.html
+++ b/index.html
@@ -28,7 +28,21 @@
         </nav>
     </header>
     <main>
+        <h1>Lenga</h1>
+        <h3>Elegimos las guitarras mas exclusivas para entregarte.</h3>
+        <p>Lenga es un e-commerce de guitarras exclusivas en Buenos Aires, inspirado en la madera lenga de la Patagonia, reconocida por su nobleza y resonancia. Nuestro nombre refleja la esencia de lo que ofrecemos: instrumentos únicos, seleccionados por su calidad, diseño y carácter propio. En Lenga creemos que cada guitarra es más que un instrumento, es una extensión del músico y de su identidad. Por eso reunimos modelos especiales y ediciones limitadas, pensados para quienes valoran lo artesanal y lo auténtico. Más que una tienda, somos un espacio donde descubrir guitarras con personalidad y un sonido inconfundible.</p>
 
+        <section>
+            <article>
+                <img src="img/Captura de pantalla 2025-09-12 a la(s) 9.28.13 a. m..png" alt="strato azul vintage">
+                <h2>Stratocaster vintage 50s</h2>
+                <h3>Fender</h3>
+                <h4>Stratocaster</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, harum tempore fugiat quis exercitationem atque enim.</p>
+                <h5>$899.99</h5>
+                <a href="">Ver +</a>
+            </article>
+        </section>
     </main>
     <footer>
         <ul>
