--- a/register.html
+++ b/register.html
@@ -26,10 +26,16 @@
         </div>
         <div>
             <label for="pass"></label>
-            <input id="passs" type="password" name="contra" placeholder="Repetir contraseña" value="" required>
+            <input id="pass" type="password" name="contra" placeholder="Repetir contraseña" value="" required>
         </div>
         <div>
             <button class="enviar-register" type="submit">Registrarme</button>
+        </div>
+        <div>
+            <input type="checkbox" name="terminos" value="" required>Acepto términos y condiciones</button>
+        </div>
+        <div>
+            <a href="login.html">Ya tengo una cuenta</a>
         </div>
     </form>
 </body>
