--- a/category.html
+++ b/category.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Categorias</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -28,7 +28,24 @@
         </nav>
     </header>   
     <main>
-
+        <h1>Guitarras Electricas</h1>
+        <nav>
+            <ul>
+                <li>Fender</li>
+                <li>Gibson</li>
+            </ul>
+        </nav>
+        <section>
+            <article>
+                <img src="img/Captura de pantalla 2025-09-12 a la(s) 9.28.13 a. m..png" alt="strato azul vintage">
+                <h2>Stratocaster vintage 50s</h2>
+                <h3>Fender</h3>
+                <h4>Stratocaster</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, harum tempore fugiat quis exercitationem atque enim.</p>
+                <h5>$899.99</h5>
+                <a href="product.html">Ver +</a>
+            </article>
+        </section>
     </main>
     <footer class="footer">
         <ul>
