--- a/product.html
+++ b/product.html
@@ -25,7 +25,12 @@
             <p>Lista de tags?</p>
         </section>
         <section>
-            
+            <form action="get">
+                <p>Rating</p>
+                <textarea name="review" id=""></textarea>
+                <p>Fecha</p>
+                <p>Nombre del usuario</p>
+            </form>
         </section>
     </main>
     <footer>
