--- a/category.html
+++ b/category.html
@@ -29,12 +29,11 @@
     </header>   
     <main>
         <h1>Guitarras Electricas</h1>
-        <nav>
-            <ul>
-                <li>Fender</li>
-                <li>Gibson</li>
-            </ul>
-        </nav>
+        <label for="cat">CATEGORIAS</label>
+        <select name="Categorias" id="cat">
+            <option value="fender">Fender</option>
+            <option value="gibson">Gibson</option>
+        </select>
         <section>
             <article>
                 <img src="img/Captura de pantalla 2025-09-12 a la(s) 9.28.13 a. m..png" alt="strato azul vintage">
