--- a/index.html
+++ b/index.html
@@ -34,12 +34,30 @@
 
         <section>
             <article>
-                <img src="img/Captura de pantalla 2025-09-12 a la(s) 9.28.13 a. m..png" alt="strato azul vintage">
+                <img src="img/strato.sinfondo.png" alt="strato azul vintage">
                 <h2>Stratocaster vintage 50s</h2>
                 <h3>Fender</h3>
                 <h4>Stratocaster</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, harum tempore fugiat quis exercitationem atque enim.</p>
-                <h5>$899.99</h5>
+                <h5>$899,99</h5>
+                <a href="product.html">Ver +</a>
+            </article>
+            <article>
+                <img src="img/PlayerIIModified Telecaster®SH.png" alt="Telecaster Negra Violeta mod">
+                <h2>Player II Modified Telecaster® SH</h2>
+                <h3>Fender</h3>
+                <h4>Telecaster</h4>
+                <p>La Player II Modified Telecaster® SH fusiona el diseño clásico Tele con mayor versatilidad. Con pastillas humbucker en el puente y single-coil en el mástil, ofrece desde limpios brillantes hasta sonidos potentes. Su mástil Modern “C”con 22 trastes y puente de seis selletas aseguran comodidad, afinación estable y un rango tonal ideal para diversos estilos.</p>
+                <h5>$1.000,00</h5>
+                <a href="product.html">Ver +</a>
+            </article>
+            <article>
+                <img src="img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Telecaster Negra Violeta mod">
+                <h2>Limited Edition American Professional II Stratocaster® Thinline</h2>
+                <h3>Fender</h3>
+                <h4>Stratocaster</h4>
+                <p>La Limited Edition American Professional II Stratocaster® Thinline combina el diseño icónico Strat con cuerpo semi-hueco para mayor resonancia. Sus pastillas V-Mod II ofrecen tonos claros y dinámicos, mientras el mástil Deep “C” y 22 trastes proporcionan comodidad y precisión. Ideal para guitarristas que buscan versatilidad, sustain mejorado y un sonido Strat clásico con carácter moderno.</p>
+                <h5>$2.345,00</h5>
                 <a href="product.html">Ver +</a>
             </article>
         </section>
