--- a/product.html
+++ b/product.html
@@ -30,7 +30,7 @@
     <main>
         <section id="seccion-product" >
             <h2>American Ultra Luxe Vintage '60s Stratocaster</h2>
-            <img id="foto-product" src="./img/Captura de pantalla 2025-09-12 a la(s) 9.28.13 a. m..png" alt="Stratocastor vintage 60s">
+            <img id="foto-product" src="./img/strato.sinfondo.png" alt="Stratocastor vintage 60s">
             <h3>Fender</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis rerum cumque sit molestiae aut neque!</p>
             <h5>$899.99</h5>
