--- a/index.html
+++ b/index.html
@@ -27,63 +27,63 @@
             </ul>
         </nav>
     </header>
-    <aside>
-        <h2>Categorias</h2>
-        <label for="cat">Marcas</label>
-        <select name="Categorias" id="cat">
-            <option value="fender">Fender</option>
-            <option value="gibson">Gibson</option>
-        </select>
-        <label for="cat">Modelos</label>
-        <select name="Categorias" id="cat">
-            <option value="Stratocaster">Stratocaster</option>
-            <option value="Telecaster">Telecaster</option>
-            <option value="ES-335">ES-335</option>
-            <option value="SG">SG</option>
-        </select>
-    </aside>
+    
     <main>
-        <h1>Lenga</h1>
-        <h3>Elegimos las guitarras mas exclusivas para entregarte.</h3>
-        <p>Lenga es un e-commerce de guitarras exclusivas en Buenos Aires, inspirado en la madera lenga de la Patagonia, reconocida por su nobleza y resonancia. Nuestro nombre refleja la esencia de lo que ofrecemos: instrumentos únicos, seleccionados por su calidad, diseño y carácter propio. En Lenga creemos que cada guitarra es más que un instrumento, es una extensión del músico y de su identidad. Por eso reunimos modelos especiales y ediciones limitadas, pensados para quienes valoran lo artesanal y lo auténtico. Más que una tienda, somos un espacio donde descubrir guitarras con personalidad y un sonido inconfundible.</p>
+        <aside>
+            <div>
+                <h2>Categorias</h2>
+                <label for="cat">Marcas</label>
+                <select name="Categorias" id="cat">
+                    <option value="fender">Fender</option>
+                    <option value="gibson">Gibson</option>
+                </select>
+            </div>
+            <div>
+                <label for="cat">Modelos</label>
+                <select name="Categorias" id="cat">
+                    <option value="Stratocaster">Stratocaster</option>
+                    <option value="Telecaster">Telecaster</option>
+                    <option value="ES-335">ES-335</option>
+                    <option value="SG">SG</option>
+                </select>
+            </div> 
+        </aside>
+        <section class="contenido">
+            <div class="titulos">
+                <h1>Lenga</h1>
+                <h3>Elegimos las guitarras mas exclusivas para entregarte.</h3>
+                <p>Lenga es un e-commerce de guitarras exclusivas en Buenos Aires, inspirado en la madera lenga de la Patagonia, reconocida por su nobleza y resonancia. Nuestro nombre refleja la esencia de lo que ofrecemos: instrumentos únicos, seleccionados por su calidad, diseño y carácter propio. En Lenga creemos que cada guitarra es más que un instrumento, es una extensión del músico y de su identidad. Por eso reunimos modelos especiales y ediciones limitadas, pensados para quienes valoran lo artesanal y lo auténtico. Más que una tienda, somos un espacio donde descubrir guitarras con personalidad y un sonido inconfundible.</p>
+            </div>
 
-        <section>
-            <article>
-                <img class="index" src="./img/strato.sinfondo.png" alt="strato azul vintage">
-                <h2>Stratocaster vintage 50s</h2>
-                <h3>Fender</h3>
-                <h4>Stratocaster</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, harum tempore fugiat quis exercitationem atque enim.</p>
-                <h5>$899,99</h5>
-                <a href="product.html">Ver +</a>
-            </article>
-            <article>
-                <img class="index" src="./img/PlayerIIModified Telecaster®SH.png" alt="Telecaster Negra Violeta mod">
-                <h2>Player II Modified Telecaster® SH</h2>
-                <h3>Fender</h3>
-                <h4>Telecaster</h4>
-                <p>La Player II Modified Telecaster® SH fusiona el diseño clásico Tele con mayor versatilidad. Con pastillas humbucker en el puente y single-coil en el mástil, ofrece desde limpios brillantes hasta sonidos potentes. Su mástil Modern “C”con 22 trastes y puente de seis selletas aseguran comodidad, afinación estable y un rango tonal ideal para diversos estilos.</p>
-                <h5>$1.000,00</h5>
-                <a href="product.html">Ver +</a>
-            </article>
-            <article>
-                <img class="index" src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Telecaster Negra Violeta mod">
-                <h2>Limited Edition American Professional II Stratocaster® Thinline</h2>
-                <h3>Fender</h3>
-                <h4>Stratocaster</h4>
-                <p>La Limited Edition American Professional II Stratocaster® Thinline combina el diseño icónico Strat con cuerpo semi-hueco para mayor resonancia. Sus pastillas V-Mod II ofrecen tonos claros y dinámicos, mientras el mástil Deep “C” y 22 trastes proporcionan comodidad y precisión. Ideal para guitarristas que buscan versatilidad, sustain mejorado y un sonido Strat clásico con carácter moderno.</p>
-                <h5>$2.345,00</h5>
-                <a href="product.html">Ver +</a>
-            </article>
-            <article>
-                <img class="index" src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Telecaster Negra Violeta mod">
-                <h2>ES-335 Figured Custom Color - Deep Ocean Burst</h2>
-                <h3>Gibson</h3>
-                <h4>ES-335</h4>
-                <p>La Limited Edition American Professional II Stratocaster® Thinline combina el diseño icónico Strat con cuerpo semi-hueco para mayor resonancia. Sus pastillas V-Mod II ofrecen tonos claros y dinámicos, mientras el mástil Deep “C” y 22 trastes proporcionan comodidad y precisión. Ideal para guitarristas que buscan versatilidad, sustain mejorado y un sonido Strat clásico con carácter moderno.</p>
-                <h5>$3.300,00</h5>
-                <a href="product.html">Ver +</a>
-            </article>
+            <section class="art">
+                <article>
+                    <img class="index" src="./img/strato.sinfondo.png" alt="strato azul vintage">
+                    <h2>Stratocaster vintage 50s</h2>
+                    <h3>Fender</h3>
+                    <h4>Stratocaster</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, harum tempore fugiat quis exercitationem atque enim.</p>
+                    <h5>$899,99</h5>
+                    <a href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <img class="index" src="./img/PlayerIIModified Telecaster®SH.png" alt="Telecaster Negra Violeta mod">
+                    <h2>Player II Modified Telecaster® SH</h2>
+                    <h3>Fender</h3>
+                    <h4>Telecaster</h4>
+                    <p>La Player II Modified Telecaster® SH fusiona el diseño clásico Tele con mayor versatilidad. Con pastillas humbucker en el puente y single-coil en el mástil, ofrece desde limpios brillantes hasta sonidos potentes. Su mástil Modern “C”con 22 trastes y puente de seis selletas aseguran comodidad, afinación estable y un rango tonal ideal para diversos estilos.</p>
+                    <h5>$1.000,00</h5>
+                    <a href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <img class="index" src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Telecaster Negra Violeta mod">
+                    <h2>Limited Edition American Professional II Stratocaster® Thinline</h2>
+                    <h3>Fender</h3>
+                    <h4>Stratocaster</h4>
+                    <p>La Limited Edition American Professional II Stratocaster® Thinline combina el diseño icónico Strat con cuerpo semi-hueco para mayor resonancia. Sus pastillas V-Mod II ofrecen tonos claros y dinámicos, mientras el mástil Deep “C” y 22 trastes proporcionan comodidad y precisión. Ideal para guitarristas que buscan versatilidad, sustain mejorado y un sonido Strat clásico con carácter moderno.</p>
+                    <h5>$2.345,00</h5>
+                    <a href="product.html">Ver +</a>
+                </article>
+            </section>
         </section>
     </main>
     <footer class="footer">
