6 guitarras mas faltan 11

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <select name="Categorias" id="cat">
                     <option value="fender">Fender</option>
                     <option value="gibson">Gibson</option>
+                    <option value="prs">PRS</option>
                 </select>
             </div>
             <div>
@@ -45,6 +46,8 @@
                     <option value="Telecaster">Telecaster</option>
                     <option value="ES-335">ES-335</option>
                     <option value="SG">SG</option>
+                    <option value="SG">Flaying V</option>
+                    <option value="SG">Les Paul</option>
                 </select>
             </div> 
         </aside>
@@ -81,6 +84,60 @@
                     <h4>Stratocaster</h4>
                     <p>La Limited Edition American Professional II Stratocaster® Thinline combina el diseño icónico Strat con cuerpo semi-hueco para mayor resonancia. Sus pastillas V-Mod II ofrecen tonos claros y dinámicos, mientras el mástil Deep “C” y 22 trastes proporcionan comodidad y precisión. Ideal para guitarristas que buscan versatilidad, sustain mejorado y un sonido Strat clásico con carácter moderno.</p>
                     <h5>$2.345,00</h5>
+                    <a href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <img class="index" src="./img/ES-335FiguredCustomColor-DeepOcean Burst.png" alt="ES-335">
+                    <h2>ES-335 Figured Custom Color - Deep Ocean Burst</h2>
+                    <h3>Gibson</h3>
+                    <h4>ES-335</h4>
+                    <p>Cuerpo semihueco de arce/álamo/arce veteado AAA de 3 capas con bloque central de arce macizo, mástil de caoba con perfil C redondeado y diapasón de madera de palo de rosa, pastillas calibradas tipo T y acabados de la serie Custom Color.</p>
+                    <h5>$4.200,00</h5>
+                    <a href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <img class="index" src="./img/AmericanProfessionalIIStratocasterHSS.png" alt="ES-335">
+                    <h2>American Professional II Stratocaster HSS</h2>
+                    <h3>Fender</h3>
+                    <h4>Stratocaster</h4>
+                    <p>Our popular Deep "C" neck now sports smooth rolled fingerboard edges, a "Super-Natural" satin finish and a newly sculpted neck heel for a supremely comfortable feel and easy access to the upper register. New V-Mod II Stratocaster single-coil pickups are more articulate than ever while retaining bell-like chime and warmth.</p>
+                    <h5>$5.700,00</h5>
+                    <a href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <img class="index" src="./img/FlyingVCustomFiguredTop-CobraBurst.png" alt="ES-335">
+                    <h2>Flying V Custom Figured Top - Cobra Burst</h2>
+                    <h3>Gibson</h3>
+                    <h4>Flying V</h4>
+                    <p>This Gibson Custom Select Flying V™ Custom features a flame maple top and a custom Cobra Burst finish. Guitars from Gibson Custom Select offer unique features that are handpicked by Gibson’s experts. These guitars are based on existing models but have custom finishes.</p>
+                    <h5>$10.235,00</h5>
+                    <a href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <img class="index" src="./img/LesPaulStandard50s,Exclusive-TransparentBlack..png" alt="ES-335">
+                    <h2>Les Paul Standard 50s, Exclusive - Transparent Black</h2>
+                    <h3>Gibson</h3>
+                    <h4>Les Paul</h4>
+                    <p>Our popular Deep "C" neck now sports smooth rolled fingerboard edges, a "Super-Natural" satin finish and a newly sculpted neck heel for a supremely comfortable feel and easy access to the upper register. New V-Mod II Stratocaster single-coil pickups are more articulate than ever while retaining bell-like chime and warmth.</p>
+                    <h5>$3.500,00</h5>
+                    <a href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <img class="index" src="./img/SGStandardCustomColor-ClassicWhite.png.png" alt="ES-335">
+                    <h2>SG Standard Custom Color - Classic White</h2>
+                    <h3>Gibson</h3>
+                    <h4>SG</h4>
+                    <p>Our popular Deep "C" neck now sports smooth rolled fingerboard edges, a "Super-Natural" satin finish and a newly sculpted neck heel for a supremely comfortable feel and easy access to the upper register. New V-Mod II Stratocaster single-coil pickups are more articulate than ever while retaining bell-like chime and warmth.</p>
+                    <h5>$1.350,00</h5>
+                    <a href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="ES-335">
+                    <h2>Gibson Custom 1958 Les Paul Junior Double Cut, Heavy Aged, TV Yellow</h2>
+                    <h3>Gibson</h3>
+                    <h4>Les Paul Junior</h4>
+                    <p>Our popular Deep "C" neck now sports smooth rolled fingerboard edges, a "Super-Natural" satin finish and a newly sculpted neck heel for a supremely comfortable feel and easy access to the upper register. New V-Mod II Stratocaster single-coil pickups are more articulate than ever while retaining bell-like chime and warmth.</p>
+                    <h5>$9.200,00</h5>
                     <a href="product.html">Ver +</a>
                 </article>
             </section>
