--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input id="search" type="text" name="busqueda" placeholder="Busqueda" value="">
         </form>
         <nav>
-            <ul>
+            <ul class="paginas">
                 <li><a href="./index.html">HOME</a></li>
                 <li><a href="./category.html">CATEGORIAS</a></li>
                 <li><a href="./login.html">LOGIN</a></li>
@@ -66,7 +66,7 @@
                     <h4>Stratocaster</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, harum tempore fugiat quis exercitationem atque enim.</p>
                     <h5>$899,99</h5>
-                    <a href="product.html">Ver +</a>
+                    <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
                     <img class="index" src="./img/PlayerIIModified Telecaster®SH.png" alt="Telecaster Negra Violeta mod">
@@ -75,7 +75,7 @@
                     <h4>Telecaster</h4>
                     <p>La Player II Modified Telecaster® SH fusiona el diseño clásico Tele con mayor versatilidad. Con pastillas humbucker en el puente y single-coil en el mástil, ofrece desde limpios brillantes hasta sonidos potentes. Su mástil Modern “C”con 22 trastes y puente de seis selletas aseguran comodidad, afinación estable y un rango tonal ideal para diversos estilos.</p>
                     <h5>$1.000,00</h5>
-                    <a href="product.html">Ver +</a>
+                    <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
                     <img class="index" src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Telecaster Negra Violeta mod">
@@ -84,7 +84,7 @@
                     <h4>Stratocaster</h4>
                     <p>La Limited Edition American Professional II Stratocaster® Thinline combina el diseño icónico Strat con cuerpo semi-hueco para mayor resonancia. Sus pastillas V-Mod II ofrecen tonos claros y dinámicos, mientras el mástil Deep “C” y 22 trastes proporcionan comodidad y precisión. Ideal para guitarristas que buscan versatilidad, sustain mejorado y un sonido Strat clásico con carácter moderno.</p>
                     <h5>$2.345,00</h5>
-                    <a href="product.html">Ver +</a>
+                    <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
                     <img class="index" src="./img/ES-335FiguredCustomColor-DeepOcean Burst.png" alt="ES-335">
@@ -93,7 +93,7 @@
                     <h4>ES-335</h4>
                     <p>Cuerpo semihueco de arce/álamo/arce veteado AAA de 3 capas con bloque central de arce macizo, mástil de caoba con perfil C redondeado y diapasón de madera de palo de rosa, pastillas calibradas tipo T y acabados de la serie Custom Color.</p>
                     <h5>$4.200,00</h5>
-                    <a href="product.html">Ver +</a>
+                    <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
                     <img class="index" src="./img/AmericanProfessionalIIStratocasterHSS.png" alt="ES-335">
@@ -102,7 +102,7 @@
                     <h4>Stratocaster</h4>
                     <p>Our popular Deep "C" neck now sports smooth rolled fingerboard edges, a "Super-Natural" satin finish and a newly sculpted neck heel for a supremely comfortable feel and easy access to the upper register. New V-Mod II Stratocaster single-coil pickups are more articulate than ever while retaining bell-like chime and warmth.</p>
                     <h5>$5.700,00</h5>
-                    <a href="product.html">Ver +</a>
+                    <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
                     <img class="index" src="./img/FlyingVCustomFiguredTop-CobraBurst.png" alt="ES-335">
@@ -111,7 +111,7 @@
                     <h4>Flying V</h4>
                     <p>This Gibson Custom Select Flying V™ Custom features a flame maple top and a custom Cobra Burst finish. Guitars from Gibson Custom Select offer unique features that are handpicked by Gibson’s experts. These guitars are based on existing models but have custom finishes.</p>
                     <h5>$10.235,00</h5>
-                    <a href="product.html">Ver +</a>
+                    <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
                     <img class="index" src="./img/LesPaulStandard50s,Exclusive-TransparentBlack..png" alt="ES-335">
@@ -120,7 +120,7 @@
                     <h4>Les Paul</h4>
                     <p>Our popular Deep "C" neck now sports smooth rolled fingerboard edges, a "Super-Natural" satin finish and a newly sculpted neck heel for a supremely comfortable feel and easy access to the upper register. New V-Mod II Stratocaster single-coil pickups are more articulate than ever while retaining bell-like chime and warmth.</p>
                     <h5>$3.500,00</h5>
-                    <a href="product.html">Ver +</a>
+                    <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
                     <img class="index" src="./img/SGStandardCustomColor-ClassicWhite.png.png" alt="ES-335">
@@ -129,7 +129,7 @@
                     <h4>SG</h4>
                     <p>Our popular Deep "C" neck now sports smooth rolled fingerboard edges, a "Super-Natural" satin finish and a newly sculpted neck heel for a supremely comfortable feel and easy access to the upper register. New V-Mod II Stratocaster single-coil pickups are more articulate than ever while retaining bell-like chime and warmth.</p>
                     <h5>$1.350,00</h5>
-                    <a href="product.html">Ver +</a>
+                    <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
                     <img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="ES-335">
@@ -138,12 +138,12 @@
                     <h4>Les Paul Junior</h4>
                     <p>Our popular Deep "C" neck now sports smooth rolled fingerboard edges, a "Super-Natural" satin finish and a newly sculpted neck heel for a supremely comfortable feel and easy access to the upper register. New V-Mod II Stratocaster single-coil pickups are more articulate than ever while retaining bell-like chime and warmth.</p>
                     <h5>$9.200,00</h5>
-                    <a href="product.html">Ver +</a>
+                    <a id="vermas" href="product.html">Ver +</a>
                 </article>
             </section>
         </section>
     </main>
-    <footer class="footer">
+    <footer>
         <ul>
             <li>Agustín Oñate</li>
             <li>Marcos Bunge</li>
