--- a/product.html
+++ b/product.html
@@ -19,7 +19,7 @@
             <input id="search" type="text" name="busqueda" placeholder="Busqueda" value="">
         </form>
         <nav>
-            <ul>
+            <ul class="paginas">
                 <li><a href="./index.html">HOME</a></li>
                 <li><a href="./category.html">CATEGORIAS</a></li>
                 <li><a href="./login.html">LOGIN</a></li>
