--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
 
             <section class="art">
                 <article>
-                    <img class="index" src="./img/strato.sinfondo.png" alt="strato azul vintage">
-                    <h2>Stratocaster vintage 50s</h2>
+                    <a href="./product.html"></a><img class="index" src="./img/strato.sinfondo.png" alt="strato azul vintage"></a>
+                    <h2>Stratocaster vintage 60s</h2>
                     <h3>Fender</h3>
                     <h4>Stratocaster</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, harum tempore fugiat quis exercitationem atque enim.</p>
+                    <p>Inspirada en la década dorada del rock, esta Stratocaster captura el auténtico espíritu de los 60. Con pastillas de estilo vintage, mástil en C y tonos brillantes, ofrece un sonido versátil ideal para blues, surf y rock clásico. Su estética retro resalta con un acabado elegante y nostálgico.</p>
                     <h5>$899,99</h5>
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <img class="index" src="./img/PlayerIIModified Telecaster®SH.png" alt="Telecaster Negra Violeta mod">
+                    <a href="./product.html"><img class="index" src="./img/PlayerIIModified Telecaster®SH.png" alt="Telecaster Negra Violeta mod"></a>
                     <h2>Player II Modified Telecaster® SH</h2>
                     <h3>Fender</h3>
                     <h4>Telecaster</h4>
@@ -78,7 +78,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <img class="index" src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Telecaster Negra Violeta mod">
+                    <a href="./product.html"></a><img class="index" src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Telecaster Negra Violeta mod"></a>
                     <h2>Limited Edition American Professional II Stratocaster® Thinline</h2>
                     <h3>Fender</h3>
                     <h4>Stratocaster</h4>
@@ -87,7 +87,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <img class="index" src="./img/ES-335FiguredCustomColor-DeepOcean Burst.png" alt="ES-335">
+                    <a href="./product.html"><img class="index" src="./img/ES-335FiguredCustomColor-DeepOcean Burst.png" alt="ES-335"></a>
                     <h2>ES-335 Figured Custom Color - Deep Ocean Burst</h2>
                     <h3>Gibson</h3>
                     <h4>ES-335</h4>
@@ -96,7 +96,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <img class="index" src="./img/AmericanProfessionalIIStratocasterHSS.png" alt="ES-335">
+                    <a href="./product.html"></a><img class="index" src="./img/AmericanProfessionalIIStratocasterHSS.png" alt="Strarocaster HSS"></a>
                     <h2>American Professional II Stratocaster HSS</h2>
                     <h3>Fender</h3>
                     <h4>Stratocaster</h4>
@@ -105,7 +105,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <img class="index" src="./img/FlyingVCustomFiguredTop-CobraBurst.png" alt="ES-335">
+                    <a href="./product.html"></a><img class="index" src="./img/FlyingVCustomFiguredTop-CobraBurst.png" alt="Flying V"></a>
                     <h2>Flying V Custom Figured Top - Cobra Burst</h2>
                     <h3>Gibson</h3>
                     <h4>Flying V</h4>
@@ -114,29 +114,29 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <img class="index" src="./img/LesPaulStandard50s,Exclusive-TransparentBlack..png" alt="ES-335">
+                    <a href="./product.html"></a><img class="index" src="./img/LesPaulStandard50s,Exclusive-TransparentBlack..png" alt="Les Paul standard"></a>
                     <h2>Les Paul Standard 50s, Exclusive - Transparent Black</h2>
                     <h3>Gibson</h3>
                     <h4>Les Paul</h4>
-                    <p>Our popular Deep "C" neck now sports smooth rolled fingerboard edges, a "Super-Natural" satin finish and a newly sculpted neck heel for a supremely comfortable feel and easy access to the upper register. New V-Mod II Stratocaster single-coil pickups are more articulate than ever while retaining bell-like chime and warmth.</p>
+                    <p>La Les Paul Standard 50s honra el legado clásico con construcción sólida de caoba, tapa de arce y perfil de mástil grueso. Sus humbuckers Burstbucker recrean los tonos cálidos y potentes de los años cincuenta. Una guitarra robusta, elegante y confiable para quienes buscan autenticidad sonora y estilo icónico.</p>
                     <h5>$3.500,00</h5>
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <img class="index" src="./img/SGStandardCustomColor-ClassicWhite.png.png" alt="ES-335">
+                    <a href="./product.html"></a><img class="index" src="./img/SGStandardCustomColor-ClassicWhite.png.png" alt="SG standard"></a>
                     <h2>SG Standard Custom Color - Classic White</h2>
                     <h3>Gibson</h3>
                     <h4>SG</h4>
-                    <p>Our popular Deep "C" neck now sports smooth rolled fingerboard edges, a "Super-Natural" satin finish and a newly sculpted neck heel for a supremely comfortable feel and easy access to the upper register. New V-Mod II Stratocaster single-coil pickups are more articulate than ever while retaining bell-like chime and warmth.</p>
+                    <p>La SG Standard en Classic White fusiona tradición y distinción. Con doble cutaway para un acceso cómodo, cuerpo liviano y potentes humbuckers, entrega un tono mordaz y lleno de carácter. Su acabado blanco clásico le otorga un aire sofisticado que combina perfectamente con su agresiva personalidad sonora.</p>
                     <h5>$1.350,00</h5>
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="ES-335">
+                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
                     <h2>Gibson Custom 1958 Les Paul Junior Double Cut, Heavy Aged, TV Yellow</h2>
                     <h3>Gibson</h3>
                     <h4>Les Paul Junior</h4>
-                    <p>Our popular Deep "C" neck now sports smooth rolled fingerboard edges, a "Super-Natural" satin finish and a newly sculpted neck heel for a supremely comfortable feel and easy access to the upper register. New V-Mod II Stratocaster single-coil pickups are more articulate than ever while retaining bell-like chime and warmth.</p>
+                    <p>Una joya de colección que revive el espíritu de 1958. Su cuerpo de caoba con doble cutaway y acabado Heavy Aged en TV Yellow evoca el paso del tiempo con carácter. Su P-90 ofrece ataque crudo, directo y expresivo, ideal para rock vintage y estilos llenos de actitud.</p>
                     <h5>$9.200,00</h5>
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
